--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
     <style name="ToolbarTheme" parent="Theme.AppCompat.Light">
         <item name="android:fontFamily">@font/pacifico</item>
+        <item name="android:background">#ffffff</item>
     </style>
 
 </resources>
