--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,22 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/home"
+    <item android:id="@+id/navHome"
           android:title="Home"
           android:icon="@drawable/ic_navbar_home_black_24dp"
           app:showAsAction="ifRoom|withText"/>
-    <item android:id="@+id/channel"
+    <item android:id="@+id/navChannel"
           android:title="Channel"
           android:icon="@drawable/ic_navbar_channel_up_black_24dp"
           app:showAsAction="ifRoom|withText"/>
-    <item android:id="@+id/notification"
+    <item android:id="@+id/navNotification"
           android:title="Notification"
           android:icon="@drawable/ic_navbar_notifications_black_24dp"
           app:showAsAction="ifRoom|withText"/>
-    <item android:id="@+id/search"
+    <item android:id="@+id/navSearch"
           android:title="Search"
           android:icon="@drawable/ic_navbar_search_black_24dp"
           app:showAsAction="ifRoom|withText"/>
-    <item android:id="@+id/bookmark"
+    <item android:id="@+id/navBookmark"
           android:title="Bookmark"
           android:icon="@drawable/ic_navbar_bookmark_black_24dp"
           app:showAsAction="ifRoom|withText"/>
