feat: added hide top toolbar to scroll

--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -18,7 +18,7 @@
                 android:layout_height="?attr/actionBarSize"
                 android:theme="@style/ToolbarTheme"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
-                app:layout_scrollFlags="enterAlways|snap"/>
+                app:layout_scrollFlags="scroll|enterAlways|snap"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
