--- a/app/src/main/res/layout/view_post.xml
+++ b/app/src/main/res/layout/view_post.xml
@@ -78,17 +78,13 @@
                 android:orientation="horizontal">
             <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/likeLottieView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:lottie_autoPlay="true"
-                    app:lottie_loop="true"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     app:lottie_fileName="lottie_like.json"/>
             <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/bookmarkLottieView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:lottie_autoPlay="true"
-                    app:lottie_loop="true"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     app:lottie_fileName="lottie_bookmark.json"/>
         </LinearLayout>
     </LinearLayout>
