--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -4,7 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/contentContainer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:scaleType="centerInside"
+    android:paddingHorizontal="8dp"
+    android:paddingTop="8dp"
+    android:background="#E0E0E0"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 </FrameLayout>
