--- a/app/src/main/res/layout/view_post.xml
+++ b/app/src/main/res/layout/view_post.xml
@@ -75,15 +75,16 @@
                 android:gravity="right"
                 android:orientation="horizontal">
             <com.airbnb.lottie.LottieAnimationView
-                    android:layout_marginTop="6dp"
                     android:id="@+id/likeLottieView"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_marginTop="-15dp"
+                    android:layout_marginRight="-15dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     app:lottie_fileName="lottie_like.json"/>
             <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/bookmarkLottieView"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     app:lottie_fileName="lottie_bookmark.json"/>
         </LinearLayout>
     </LinearLayout>
