--- a/app/src/main/res/layout/view_post.xml
+++ b/app/src/main/res/layout/view_post.xml
@@ -22,12 +22,12 @@
                     android:id="@+id/postOwnerAvatar"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                     app:srcCompat="@mipmap/ic_launcher_round"
                     android:contentDescription="@string/nav_header_desc"/>
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
                     android:orientation="vertical">
                 <TextView
                         android:id="@+id/postOwnerDisplayName"
