--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,10 +2,9 @@
 
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingTop="56dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
@@ -48,10 +47,10 @@
 
     <com.google.android.material.button.MaterialButton
             android:id="@+id/loginBtn"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="12dp"
             android:padding="12dp"
             android:theme="@style/Base.V14.Theme.MaterialComponents.Light"
             android:background="@color/colorPrimary"
@@ -61,8 +60,7 @@
             android:id="@+id/signupLink"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:text="No account yet? Create one"
+            android:text="sign up"
             android:gravity="center"
             android:textSize="16dip"/>
 
