--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -2,7 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/contentContainer"
+    android:id="@+id/homeContentContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scaleType="centerInside"
