--- a/app/src/main/res/layout/view_signup_password.xml
+++ b/app/src/main/res/layout/view_signup_password.xml
@@ -7,37 +7,37 @@
         android:paddingHorizontal="24dp"
         android:orientation="vertical">
 
-    <!-- Name Label -->
+    <!-- Password Label -->
     <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp">
         <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/nameTextView"
+                android:id="@+id/passwordTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:maxLength="32"
-                android:hint="Name"/>
+                android:hint="Password"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Email Label -->
+    <!-- Confirm Password Label -->
     <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
         <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/emailTextView"
+                android:id="@+id/confirmPasswordTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:maxLength="255"
-                android:hint="Email"/>
+                android:hint="Confirm password"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-            android:id="@+id/nameEmailNextBtn"
+            android:id="@+id/passwordNextBtn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
