fix: updated image size

--- a/app/src/main/res/layout/view_post.xml
+++ b/app/src/main/res/layout/view_post.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.card.MaterialCardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:fresco="http://schemas.android.com/tools"
+        xmlns:fresco="http://schemas.android.com/apk/res-auto"
         style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,7 +52,10 @@
         <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/postImage"
                 android:layout_width="match_parent"
-                android:layout_height="194dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                fresco:viewAspectRatio="1"
+                fresco:actualImageScaleType="centerCrop"
                 fresco:placeholderImage="@drawable/science"
                 android:background="#000000"/>
         <TextView
