feat: added RxBinding

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,6 +2,7 @@
 
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,11 +23,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            android:layout_marginBottom="8dp"
+            app:errorEnabled="true">
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/emailTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLength="32"
                 android:inputType="textEmailAddress"
                 android:hint="Email"/>
     </com.google.android.material.textfield.TextInputLayout>
@@ -36,11 +39,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            android:layout_marginBottom="8dp"
+            app:errorEnabled="true">
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/passwordTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:maxLength="32"
                 android:inputType="textPassword"
                 android:hint="Password"/>
     </com.google.android.material.textfield.TextInputLayout>
