refactor: moved lotties from assests to res/raw

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -34,7 +34,7 @@
                 android:layout_height="300dp"
                 app:lottie_autoPlay="true"
                 app:lottie_loop="true"
-                app:lottie_fileName="lottie_lab_dudes.json"/>
+                app:lottie_rawRes="@raw/lottie_lab_dudes"/>
         <FrameLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/signupContentContainer"
