--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,7 +87,7 @@
             android:layout_marginTop="16dp"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
-            app:lottie_fileName="material_wave_loading.json"
+            app:lottie_rawRes="@raw/material_wave_loading"
             app:lottie_scale="0.4"/>
 
 </RelativeLayout>
