--- a/app/src/main/res/layout/view_search.xml
+++ b/app/src/main/res/layout/view_search.xml
@@ -6,50 +6,58 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <HorizontalScrollView
+    <io.keyu.urekalite.view.UserHorizontalScrollView
+            android:id="@+id/userSearchList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="none"
-            android:fillViewport="true">
+            android:layout_height="match_parent">
 
-        <LinearLayout
-                android:id="@+id/ll"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+    </io.keyu.urekalite.view.UserHorizontalScrollView>
 
-            <io.keyu.urekalite.view.UserSmallView
-                    android:layout_width="100dp"
-                    android:layout_height="80dp"/>
-            <io.keyu.urekalite.view.UserSmallView
-                    android:layout_width="100dp"
-                    android:layout_height="80dp"/>
-            <io.keyu.urekalite.view.UserSmallView
-                    android:layout_width="100dp"
-                    android:layout_height="80dp"/>
-            <io.keyu.urekalite.view.UserSmallView
-                    android:layout_width="100dp"
-                    android:layout_height="80dp"/>
-            <io.keyu.urekalite.view.UserSmallView
-                    android:layout_width="100dp"
-                    android:layout_height="80dp"/>
-            <io.keyu.urekalite.view.UserSmallView
-                    android:layout_width="100dp"
-                    android:layout_height="80dp"/>
-            <io.keyu.urekalite.view.UserSmallView
-                    android:layout_width="100dp"
-                    android:layout_height="80dp"/>
-            <io.keyu.urekalite.view.UserSmallView
-                    android:layout_width="100dp"
-                    android:layout_height="80dp"/>
-            <io.keyu.urekalite.view.UserSmallView
-                    android:layout_width="100dp"
-                    android:layout_height="80dp"/>
-            <io.keyu.urekalite.view.UserSmallView
-                    android:layout_width="100dp"
-                    android:layout_height="80dp"/>
-        </LinearLayout>
-    </HorizontalScrollView>
+    <!--<HorizontalScrollView-->
+    <!--android:id="@+id/horizontalScrollView"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:scrollbars="none"-->
+    <!--android:fillViewport="true">-->
+
+    <!--<LinearLayout-->
+    <!--android:id="@+id/linearLayout"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:orientation="horizontal">-->
+
+    <!--<io.keyu.urekalite.view.UserSmallView-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="80dp"/>-->
+    <!--<io.keyu.urekalite.view.UserSmallView-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="80dp"/>-->
+    <!--<io.keyu.urekalite.view.UserSmallView-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="80dp"/>-->
+    <!--<io.keyu.urekalite.view.UserSmallView-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="80dp"/>-->
+    <!--<io.keyu.urekalite.view.UserSmallView-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="80dp"/>-->
+    <!--<io.keyu.urekalite.view.UserSmallView-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="80dp"/>-->
+    <!--<io.keyu.urekalite.view.UserSmallView-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="80dp"/>-->
+    <!--<io.keyu.urekalite.view.UserSmallView-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="80dp"/>-->
+    <!--<io.keyu.urekalite.view.UserSmallView-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="80dp"/>-->
+    <!--<io.keyu.urekalite.view.UserSmallView-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="80dp"/>-->
+    <!--</LinearLayout>-->
+    <!--</HorizontalScrollView>-->
 
     <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/bookLottieView"
