--- a/app/src/main/res/layout/view_user_small.xml
+++ b/app/src/main/res/layout/view_user_small.xml
@@ -3,8 +3,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:fresco="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="100dp"
+        android:layout_height="80dp"
         android:layout_gravity="center"
         app:cardCornerRadius="6dp"
         app:cardElevation="1dp">
