fix: updated card style

--- a/app/src/main/res/layout/view_user_list.xml
+++ b/app/src/main/res/layout/view_user_list.xml
@@ -5,6 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
+        android:paddingVertical="2dp"
         android:fillViewport="true">
 
     <LinearLayout
