--- a/app/src/main/res/layout/view_user_small.xml
+++ b/app/src/main/res/layout/view_user_small.xml
@@ -3,9 +3,10 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:fresco="http://schemas.android.com/apk/res-auto"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_width="120dp"
+        android:layout_height="90dp"
         android:layout_gravity="center"
+        app:cardUseCompatPadding="true"
         app:cardCornerRadius="6dp"
         app:cardElevation="1dp">
 
