--- a/app/src/main/res/layout/view_post.xml
+++ b/app/src/main/res/layout/view_post.xml
@@ -19,12 +19,17 @@
                 android:layout_height="match_parent"
                 android:padding="16dp"
                 android:orientation="horizontal">
-            <ImageView
+
+            <com.facebook.drawee.view.SimpleDraweeView
                     android:id="@+id/postOwnerAvatar"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    app:srcCompat="@mipmap/ic_launcher_round"
-                    android:contentDescription="@string/nav_header_desc"/>
+                    android:adjustViewBounds="true"
+                    fresco:viewAspectRatio="1"
+                    app:roundAsCircle="true"
+                    fresco:actualImageScaleType="centerCrop"
+                    fresco:placeholderImage="@mipmap/ic_launcher_round"/>
+
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
