--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
+    <item android:id="@+id/latest"
+          android:title="Latest"
+          android:orderInCategory="0"
+          app:showAsAction="never"/>
+    <item android:id="@+id/popular"
+          android:title="Trending"
+          android:orderInCategory="1"
           app:showAsAction="never"/>
 </menu>
