--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -13,15 +13,16 @@
         android:orientation="vertical"
         android:gravity="bottom">
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/avatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            app:srcCompat="@mipmap/ic_launcher_round"
-            android:contentDescription="@string/nav_header_desc"
-            android:id="@+id/imageView"/>
+            app:placeholderImage="@mipmap/ic_launcher_round"
+            android:contentDescription="@string/nav_header_desc"/>
 
     <TextView
+            android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
@@ -29,9 +30,9 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
+            android:id="@+id/role"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/nav_header_subtitle"
-            android:id="@+id/textView"/>
+            android:text="@string/nav_header_subtitle"/>
 
 </LinearLayout>
