--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,8 @@
         <!-- Optional, on Android 5+ you can modify the colorPrimaryDark color to match the windowBackground color for further branding-->
         <!-- <item name="colorPrimaryDark">@android:color/white</item> -->
     </style>
+
+    <style name="PostPreviewAnimation">
+        <item name="android:windowEnterAnimation">@anim/fade_in</item>
+    </style>
 </resources>
